@@ -5,6 +5,14 @@ plugins {
 group = "net.swofty"
 version = "3.0"
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_25
+    targetCompatibility = JavaVersion.VERSION_25
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(25))
+    }
+}
+
 repositories {
     maven("https://jitpack.io")
     maven("https://s01.oss.sonatype.org/content/repositories/snapshots/")
@@ -20,13 +28,9 @@ dependencies {
     implementation("org.mongodb:bson:4.11.2")
     implementation("net.kyori:adventure-text-minimessage:4.24.0")
     implementation("dev.hollowcube:polar:1.14.7")
-    compileOnly("net.minestom:minestom:2025.08.18-1.21.8") {
+    compileOnly("net.minestom:minestom:2025.12.20c-1.21.11") {
         exclude(group = "org.jboss.shrinkwrap.resolver", module = "shrinkwrap-resolver-depchain")
     }
     implementation("org.tinylog:tinylog-api:2.7.0")
     implementation("org.tinylog:tinylog-impl:2.7.0")
-}
-
-tasks.withType<JavaCompile> {
-    options.compilerArgs.add("--enable-preview")
 }
